fix(Input): disallow stretching over parent width

--- a/src/components/ui/Input/Input.module.scss
+++ b/src/components/ui/Input/Input.module.scss
@@ -13,6 +13,7 @@ $icon-offset-small: 1.6rem;
 
 .input {
   flex: 1;
+  min-width: 0;
   padding: 1.5rem 1.9rem;
   color: inherit;
   font-weight: 700;
